force-app/main/default/objects/Invoice_Header__c/fields/Account_Fixed_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Account_Fixed_Monthly_Revenue__c</fullName>
    <formula>Billing_Account__r.Fixed_Monthly_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Fixed Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>