force-app/main/default/objects/Invoice_Header__c/fields/ARM_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>ARM_Hourly_Rate__c</fullName>
    <formula>Billing_Account__r.Hourly_rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARM Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>