force-app/main/default/objects/Invoice_Header__c/fields/Billed_Hourly_Rate_Billed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Billed_Hourly_Rate_Billed_Hours__c</fullName>
    <formula>IF( Actual_Billable_Hours__c = 0 || ISBLANK(Actual_Billable_Hours__c) , 0, Total_Bill_Amount__c / Actual_Billable_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Hourly Rate (Billed Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>