force-app/main/default/objects/Invoice_Header__c/fields/Billed_Hourly_Rate_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Billed_Hourly_Rate_Total_Hours__c</fullName>
    <formula>IF( Total_Billable_Hours__c = 0 || ISBLANK( Total_Billable_Hours__c ) , 0, Total_Bill_Amount__c / Total_Billable_Hours__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Hourly Rate (Total Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>