force-app/main/default/objects/Invoice_Header__c/fields/Due_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_By_Date__c</fullName>
    <label>Due By Date</label>
    <type>Date</type>
</CustomField>