force-app/main/default/objects/Invoice_Header__c/fields/For_Project__c.field-meta.xml
<CustomField>
    <fullName>For_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>For Project</label>
    <referenceTo>inov8__PMT_Project__c</referenceTo>
    <relationshipLabel>Invoice Headers</relationshipLabel>
    <relationshipName>Invoice_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>