force-app/main/default/objects/Invoice_Header__c/fields/Is_QB_Amount_Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Is_QB_Amount_Bill_Amount__c</fullName>
    <formula>Quickbooks_Amount__c != Total_Bill_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is QB Amount != Bill Amount?</label>
    <type>Checkbox</type>
</CustomField>