force-app/main/default/objects/Invoice_Header__c/fields/Payment_Comment__c.field-meta.xml
<CustomField>
    <fullName>Payment_Comment__c</fullName>
    <label>Payment Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>