force-app/main/default/objects/Invoice_Header__c/fields/QuickBooks_Date__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Date__c</fullName>
    <label>QuickBooks Date</label>
    <type>Date</type>
</CustomField>