force-app/main/default/objects/Invoice_Header__c/fields/QuickBooks_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Invoice_Number__c</fullName>
    <externalId>true</externalId>
    <label>QuickBooks Invoice Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>