force-app/main/default/objects/Invoice_Header__c/fields/Send_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invoice Email</label>
    <type>Checkbox</type>
</CustomField>