force-app/main/default/objects/Invoice_Header__c/fields/Send_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_On_Date__c</fullName>
    <label>Send On Date</label>
    <type>Date</type>
</CustomField>