force-app/main/default/objects/Invoice_Header__c/fields/Total_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Collected__c</fullName>
    <label>Total Amount Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>