force-app/main/default/objects/Invoice_Header__c/fields/Total_Bill_Amount_fixed__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill_Amount_fixed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When clicking the Process Invoice button, whether to change the Total Bill Amount or leave it as it is. If checked the Total Bill Amount won&apos;t change.</inlineHelpText>
    <label>Total Bill Amount fixed?</label>
    <type>Checkbox</type>
</CustomField>